@@ -23,6 +23,8 @@ VP 9.2.1 Changelog
   If 'Display Image In Editor' option is selected and the flasher is rotated the image won't rotate due to a DX7 limitation.
   If the flasher is not an additive alpha flasher you can colorize the image with 'Color' if you don't want that effect set the color to blank white (RGB 255,255,255).
 
+- add height offset to bumper element
+
 - add additional (optional) parameters to PlaySound to increase/decrease the frequency, apply all the settings to an already playing sample and choose if to restart this sample from the beginning or not
   all parameters are now: PlaySound "name",loopcount,volume,pan,randompitch,pitch,useexisting,restart
   pitch can be positive or negative and directly adds onto the standard sample frequency
